Few fixes.